# SuffixArray

./: .gitignore  Benchmark.cpp  Benchmark.h  BoyerMoore.cpp  BoyerMoore.h  CMakeLists.txt  InteractiveMenu.cpp  InteractiveMenu.h  KMP.cpp  KMP.h  PlagiarismDetector.cpp  PlagiarismDetector.h  README.md  SuffixArray.cpp  SuffixArray.h  SuffixTree.cpp  SuffixTree.h  demo_plagiarism.cpp  main.cpp
